feature/11: Added virtual-schema-shared-integration-tests